# aiopowerwall

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
src/aiopowerwall/: __init__.py  client.py  energysite.py  exceptions.py  models.py  queries.py  transport.py
src/aiopowerwall/proto/: __init__.py  tedapi_combined.proto  tedapi_combined_pb2.py
tests/: test_client.py  test_energysite.py  test_grid_import_export.py  test_operation_mode.py  test_reserve_scaling.py  test_soc_scaling.py  test_transport.py
